# NeYetisir

./: DEPLOY.md  README.md  pyproject.toml
backend/: auth.py  cache.py  config.py  db.py  deps.py  main.py  models.py
backend/prompts/: tarla.md
backend/routers/: admin.py  analiz.py  auth.py  kiralama.py  locations.py  parsel.py  report.py
backend/services/: agronomy.py  context.py  elevation.py  mock.py  report.py  soilgrids.py  soilgrids_local.py  tkgm.py  weather.py
data/: app.db
frontend/: admin.html  admin.js  app.js  auth.js  charts.js  ciftcimiz-ol.html  ciftcimiz-ol.js  i18n.js  il-ilce.js  index.html  kiralama.html  kiralama.js  kiralik.html  kiralik.js  llms.txt  robots.txt  style.css  tarlama-yardim.html  tarlama-yardim.js
frontend/locales/: en.json  tr.json
