[project]
name = "tarla-islet-demo"
version = "0.1.0"
description = "TKGM parsel sorgu demo: FastAPI proxy + Leaflet harita"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "cachetools>=5.5",
    "shapely>=2.0",
    "langchain>=1.2.15",
    "langchain-openrouter>=0.2.1",
    "langgraph>=1.1.9",
    "python-dotenv>=1.2.2",
    "rasterio>=1.4",
    "pyproj>=3.7",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
